[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -309,13 +309,26 @@ DEADLINE: <2021-09-05 周日 23:00 ++1w> SCHEDULED: <2021-09-04 周六 18:00 ++1
   ------------------------------------------------
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
-** TODO [#A] 每月归档到年度文件                                     :event:
-DEADLINE: <2021-08-30 周一 23:00 ++1m> SCHEDULED: <2021-08-30 周一 09:00 ++1m>
+** TODO [#A] 每月归档到年度文件                                      :event:
+DEADLINE: <2021-09-30 周四 23:00 ++1m> SCHEDULED: <2021-09-30 周四 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-07-31 周六 19:44]
+:LAST_REPEAT: [2021-08-30 周一 20:50]
 :END:
+- State "DONE"       from "TODO"       [2021-08-30 周一 20:50] \\
+  第五个月, 工作上:
+  1. 完成了基础商店功能的制作
+  2. 完成了新版英雄山英雄背包的制作
+  3. 完成了在新版英雄山英雄背包中给队友穿戴装备的功能
+  4. 完成了英雄分解功能的制作
+  5. 优化了英雄删除流程
+  6. 完成了临时处理： 根据战斗力得出英雄山战斗结果, 跳过战斗过程
+  7. 完成了对补丁制作流程的学习, 并应用到项目之中
+  8. 完成了代码整洁之道的学习
+  生活上:
+  1. 原疯了
+  2. 熟悉的补丁工作, 熟悉的脑溢血
 - State "DONE"       from "TODO"       [2021-07-31 周六 19:44] \\
   第四个月, 工作上:
   1. 完成了《改善python程序的91个建议》的学习
