[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -13,10 +13,12 @@
 * Inbox
 * Next Action
 ** TODO [#A] 大壮名城G1-1018租房月志                                :event:
-DEADLINE: <2021-09-12 周日 23:00 +1m> SCHEDULED: <2021-09-12 周日 09:00 +1m>
+DEADLINE: <2021-10-12 周二 23:00 +1m> SCHEDULED: <2021-10-12 周二 09:00 +1m>
 :PROPERTIES:
 :LOGGING: DONE(@)
 :END:
+- State "DONE"       from "TODO"       [2021-08-12 周四 16:02] \\
+  1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费113
 - State "DONE"       from "TODO"       [2021-07-12 周一 09:21] \\
   1. 房租2000, 电费160(空调+电脑), 物业+水117, 网费113
 - State "DONE"       from "TODO"       [2021-06-13 周日 17:42] \\
@@ -29,12 +31,27 @@ DEADLINE: <2021-09-12 周日 23:00 +1m> SCHEDULED: <2021-09-12 周日 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-09-05 周日 23:00 ++1w> SCHEDULED: <2021-09-04 周六 18:00 ++1w>
+DEADLINE: <2021-09-12 周日 23:00 ++1w> SCHEDULED: <2021-09-11 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-08-28 周六 16:47]
+:LAST_REPEAT: [2021-09-04 周六 15:56]
 :END:
+- State "DONE"       from "TODO"       [2021-09-04 周六 15:56] \\
+  1. 完成了开发版本补丁工具链的制作
+     - 平台补丁号同步脚本
+     - 本地补丁创建脚本
+     - 外网版本号及补丁信息脚本
+     - 提交了同步提升版本号的持续集成任务
+  2. 初步优化了m8的启动逻辑
+     将启动过程拆分为:
+     - 游戏环境初始化
+     - 项目环境初始化
+     - 登陆环境初始化
+  3. 阅读了《我所理解的cocos2d-x》2-4章
+  ------------------------------------------------
+  ------------------------------------------------
+  1. 工作环境严肃起来喽, 午休变短了
 - State "DONE"       from "TODO"       [2021-08-28 周六 16:47] \\
   1. 完成了英雄山战斗根据总战力跳过战斗阶段的需求
      - 主要工作量在于根据新的战斗力求值公式计算敌方的战斗力(己方由服务器计算)
@@ -389,5 +406,12 @@ SCHEDULED: <2021-06-12 周六 09:00>
 ** WAIT 爬火炉山                                                     :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
+** Archive                                                        :ARCHIVE:
+*** DONE 理发                                                       :event:
+CLOSED: [2021-09-04 周六 15:45]
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-09-04 周六 16:04
+:END:
+<2021-09-02 周四 19:00>
 * Project
 * Someday
