--- a/src/org/ref/我所理解的Cocos2d-x.org
+++ b/src/org/ref/我所理解的Cocos2d-x.org
@@ -89,3 +89,73 @@
      方法为performFunctionInCocosThread
    - 通过注册异步回调, 纹理可以异步加载
    - 异步会导致难以进行单元测试
+     
+* OpenGL ES2.0 概览
+1. GPU是数以千计的更小, 更高效的核心组成, 专门用来处理多任务而设计, 衡量的主要指
+   标是每秒钟填充像素
+2. OpenGL ES 是 嵌入式系统的图形硬件软件接口
+3. 渲染管线
+   顶点数组 \rightarrow 顶点着色器 \rightarrow 图元装配 \rightarrow 光栅化 \rightarrow 片段着色器 \rightarrow 片段测试 \rightarrow 帧缓冲
+   - 顶点数组 :: 每个顶点定义图元的一个点, 含有顶点坐标, 颜色, 法向量, 纹理坐标
+     等数据
+   - 顶点着色器 :: 主要执行将本地坐标变换到gl坐标, 并为后边的片段着色器提供一些
+     额外输入
+   - 图元装配 :: 经过视锥裁剪和视口变换, 将坐标转换为设备坐标(显示器像素为单位)
+   - 光栅化 :: 装配过后的2d图元转换为片段, 抗锯齿和多重采样就发生在这个阶段
+   - 片段着色器 :: 光照, 阴影, 特效, 纹理都在这个阶段实现
+   - 片段测试 :: 深度测试, 模板测试用来筛除部分片段, 通过的片段进入混合阶段
+   在这套流程中, 只有两个着色器是可编程的, 其他部分由OpenGL自身控制
+4. 并行计算
+   OpenGL保证物体的绘制总是按顺序进行的, 但是每个物体的绘制内部是并行的, 主要体现
+   在两个方面:
+   - 每个阶段内部被拆分成多个子任务
+   - 每个顶点和片段都是独立, 并行处理的
+5. Cocos2d-x的优化措施
+   - 减少渲染次数
+   - 分离渲染和逻辑
+6. 帧缓冲
+   这里存储这每个像素点的所有信息, 包括颜色, 深度, 模板值
+   显示设备一般提供两个帧缓冲, 分为前台和后台, 渲染的数据发送的后台, 等到一帧渲染
+   完毕后将前后切换, 这样做的目的是给用户一次性呈现一个完整的画面, 而不是支离破碎
+   的带有渲染过程的画面
+
+* 全新的绘制系统
+1. 新绘制系统特点
+   - 绘制逻辑从主逻辑分离
+   - 在应用层就进行视口裁剪, 丢弃不会被绘制的元素
+   - 采用了自动批处理绘制技术, 合并相邻类似的渲染命令
+2. 绘制流程
+   1. 遍历ui树, 将绘制命令发送到renderer中
+   2. 根据globalz, 对当前渲染队列中的命令排序
+      - 渲染队列有三个子队列, 分别为glz<0, glz=0, glz大于0的
+      - glz==0的是不需要排序的, 因为默认就是0, 它的顺序就应该是ui树的遍历顺序
+      - 这样做的目的是为了减少排序次数, 提高渲染性能
+   3. 根据排好序的命令按序渲染
+3. RenderCommand
+   每次绘制调用的都是一个RenderCommand, 主要有4种类型的RenderCommand:
+   - QuadCommand :: 绘制矩形区域
+   - BatchCommand :: 绘制ATextureAtlas
+   - GroupCommand :: 内部指向一个渲染队列id, 代表一组绘制命令
+   - CustomCommand :: 自定义绘制命令
+4. Renderer
+   一个Renderer持有一个渲染队列栈, 内部存放多个渲染队列, 每当创建一个新的GroupCommand
+   时, 会在入栈一个新的渲染队列, 后续的渲染命令都会追加到栈顶, 当GroupCommand结束时
+   会自动弹出. 通过绘制栈来实现多个GroupCommand互不干扰, 独立渲染(和函数栈的概念
+   类似的)
+   渲染队列栈中的每个渲染队列的排序是独立互不干扰的
+5. QuadCommand
+   - 用于绘制一个或多个矩形区域, 一个quad有四个顶点, 每个顶点有三个数据(位置,
+     颜色, 纹理坐标)
+   - 自动批绘制的机制如下, 当多个连续的QuadCommand拥有同样的"材料"时, 则不立即
+     绘制而是将数据缓存到数组中, 并将这些数据一次性发送到gl中进行绘制, 材料指的是
+     纹理, 着色器, 混合模式, gl状态设置
+6. 元素的可见性
+   - cocosx会在绘制阶段判断Sprite的可见性, 如果不在显示区域内则会跳过, 不发送绘制
+     指令到GL
+   - Node也有设置可见性的选项, 如果设置为不可见效果和上面是一致的, 但是不可见不代
+     表无法响应事件
+7. CustomCommand
+   由于绘制和ui遍历的分离, 我们无法直到节点什么时候被绘制, 所以我们可以实现一个
+   自定义命令, 在绘制阶段触发一个回调来通知绘制开始和结束
+7. 
+8. 
