--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -13,12 +13,13 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 完成每周周报                                             :work:
-SCHEDULED: <2021-09-04 周六 18:00 ++1w> DEADLINE: <2021-09-06 周一 12:00 ++1w>
+** TODO [#A] 完成每周周报                                            :work:
+SCHEDULED: <2021-09-11 周六 18:00 ++1w> DEADLINE: <2021-09-13 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-08-28 周六 17:09]
+:LAST_REPEAT: [2021-09-04 周六 16:04]
 :END:
+- State "DONE"       from "TODO"       [2021-09-04 周六 16:04]
 - State "DONE"       from "TODO"       [2021-08-28 周六 17:09]
 - State "DONE"       from "TODO"       [2021-08-21 周六 16:25]
 - State "DONE"       from "TODO"       [2021-08-07 周六 17:17]
@@ -41,15 +42,18 @@ SCHEDULED: <2021-09-04 周六 18:00 ++1w> DEADLINE: <2021-09-06 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** TODO [#C] 完成leetcode一两道题                                    :learn:
-SCHEDULED: <2021-08-27 周五 19:00 ++1d>
+** TODO [#C] 完成leetcode一两道题                                   :learn:
+SCHEDULED: <2021-09-05 周日 09:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-08-26 周四 09:51]
+:LAST_REPEAT: [2021-09-03 周五 11:32]
 :END:
 
+- State "DONE"       from "TODO"       [2021-09-04 周六 11:32]
+- State "DONE"       from "TODO"       [2021-09-03 周五 10:34]
+- State "DONE"       from "TODO"       [2021-09-02 周四 09:32]
 - State "DONE"       from "TODO"       [2021-08-26 周四 09:51]
 - State "DONE"       from "TODO"       [2021-08-25 周三 15:13]
 - State "DONE"       from "TODO"       [2021-08-24 周二 19:11]
@@ -185,14 +189,30 @@ SCHEDULED: <2021-08-27 周五 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#A] 学习《我所理解的cocos2d-x》                          :learn:m8:
-SCHEDULED: <2021-08-27 周五 09:00 ++1d>
+** TODO [#A] 学习《我所理解的cocos2d-x》                         :learn:m8:
+SCHEDULED: <2021-09-05 周日 09:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:60
 :STYLE:    habit
-:LAST_REPEAT: [2021-08-26 周四 10:25]
+:LAST_REPEAT: [2021-09-04 周六 15:52]
 :END:
+- State "DONE"       from "TODO"       [2021-09-04 周六 15:52]
+- State "DONE"       from "TODO"       [2021-09-03 周五 13:24]
+- State "DONE"       from "TODO"       [2021-09-02 周四 10:49]
+- State "DONE"       from "TODO"       [2021-08-31 周二 09:33]
 - State "DONE"       from "TODO"       [2021-08-26 周四 10:25]
+** TODO [#A] 规范模块重启代码                                          :m8:
+SCHEDULED: <2021-09-06 周一 09:00>
+** TODO [#A] 编写季度报告                                              :m8:
+DEADLINE: <2021-09-08 周三 21:00> SCHEDULED: <2021-09-06 周一 13:00>
+** TODO [#A] 处理补丁未能同步外链问题                                  :m8:
+SCHEDULED: <2021-09-06 周一 14:00>
+** Archive                                                        :ARCHIVE:
+*** DONE [#A] 优化游戏启动流程                                    :work:m8:
+CLOSED: [2021-09-04 周六 15:52] SCHEDULED: <2021-09-02 周四 13:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-09-04 周六 16:04
+:END:
 * Appointment
 * Project
 * Someday
