--- a/src/org/ref/代码整洁之道.org
+++ b/src/org/ref/代码整洁之道.org
@@ -451,7 +451,7 @@
     调用了可能返回null的函数是否检查其返回值
 25. 结构要大于约定, 约定使用永远无法代替结构的强制性. 比如抽象类会强迫所有子类实
     现接口, 而约定却没法强制执行
-26. 将一系列逻辑判断合并为一个命名清晰的接口会让代码更加易读J
+26. 将一系列逻辑判断合并为一个命名清晰的接口会让代码更加易读
 27. 肯定性条件大于否定性条件
 28. 每个函数应该做一件事且仅做一件事
 29. 不要遮掩代码之间的时序耦合, 如果函数之间的调用有顺序关系, 可以将多个函数通过
