--- a/src/org/ref/我所理解的Cocos2d-x.org
+++ b/src/org/ref/我所理解的Cocos2d-x.org
@@ -157,5 +157,113 @@
 7. CustomCommand
    由于绘制和ui遍历的分离, 我们无法直到节点什么时候被绘制, 所以我们可以实现一个
    自定义命令, 在绘制阶段触发一个回调来通知绘制开始和结束
-7. 
-8. 
+
+* 纹理
+1. 光栅化
+   将2d图元转化为帧缓冲中整数坐标上的片段的过程叫做光栅化
+   * 多重采样 :: 由于屏幕是由离散的像素点构成的, 所以在对图元采样的时候会丢失一些
+     信息导致边缘出现锯齿, 采用多重采样(以目标为中心采集多个点的颜色值来设置此点
+     最终颜色值)可以有效柔化边缘
+   * 纹理坐标
+     纹理坐标通常使用(u, v)来表示, 分别代表纹理的宽度和高度, 片段着色器中使用的
+     片段纹理坐标通常使用(s, t)坐标, 范围为[0, 1], 由(u, v)\rightarrow(s, t)这一规范化
+     过程是在光栅化阶段完成的
+2. 像素矩形
+   表示一个矩形区域的二维像素数组, 存储颜色值的像素矩形被称为纹理
+   一个纹理通过解包操作, 将数值传输到gl之中形成rgba数值
+3. 客户端图像格式
+   客户端在传输纹理的时候必须先解压图像资源, 转换为GL服务端支持的纹理格式, 才能确
+   保纹理正确使用, 一般有RGBA8888, RGBA4444, 后面的数字一般代表每个分量所占用的
+   位数
+4. 纹理对象和加载纹理
+   通过命令将纹理加载到GL之后, 纹理会一直占用内存, 不用的时候可以使用glDeleteTextures
+   删除纹理, 由于应用程序不直接持有纹理的指针, 所以应用程序需要使用glBindTexture
+   来设定当前使用的纹理
+5. OpenGl ES支持在一个渲染管线中使用多个纹理, 用来增强画面表现力
+6. 纹理在放缩时会出现画面失真的情况, 有两种放缩策略:
+   - GL_NEAREST :: 选择最近的纹素采样, 性能高, 表现差
+   - GL_LINEAR :: 选择2x2的区域进行双线性插值得到一个新的颜色, 性能稍差, 表现平滑
+7. 多级纹理
+   一种预先生成多个不同分辨率下纹理的技术, 不需要渲染时临时计算而是在处理资源阶段
+   就生成多级纹理, 有效提高渲染性能, 其中每一级的纹理大小是上一级的1/2
+   - 和普通的放缩一样, 多级纹理有四种缩放策略, cocos默认使用GL_LINEAR_MIPMAP_NEAREST,
+     这是在性能和效果上比较平衡的一种缩放策略
+   - 使用Texture2D::initWithMipmaps上传多级纹理
+   - 使用glGenerateMipMap来生成多级纹理, cocos要求生成多级纹理的原始纹理尺寸一定
+     是2的指数倍
+8. 纹理压缩采用了和传统的压缩截然不同的策略(由于使用场景和侧重点不一致), 如下所示:
+   - 解压缩度快
+   - 压缩速度慢
+   - 随机读取快
+   - 采用固定压缩率, 有损压缩
+   常用的两种压缩格式:
+   - PVRTC :: 支持RGBA通道, 支持alpha预乘
+   - ETC :: 不支持alpha通道, 通过其他解决方案来存放透明度信息
+9. 纹理管理
+   - 纹理在没删除之前, 一直会驻留在GPU中
+   - 使用TextureCache管理文理的创建, 缓存, 和删除
+   - 场景过度时采用引用计数管理纹理, 不是物理上的引用计数, 而是逻辑上的引用计数,
+     如果某个场景使用某个纹理(不管他在这个场景使用了多少次), 则逻辑计数+1, 如果
+     下个场景不用则减一, 为0时则释放纹理. 采用这种方式可以有效处理场景过度时纹理
+     的管理问题
+   - 即便是动态生成纹理的场景, 纹理也最好进行预加载(而不是等到真正使用的时候才加
+     载)
+10. 纹理大小的计算
+    size = width * height *bpp/8
+    其中width和height是宽和高, 单位为像素, bpp为每个像素所占用的位数, RGBA8888
+    就占用32位, 所以一个1024*1024, 采用RGBA8888格式的纹理的大小为1024*1024*4
+    =4M
+    如果使用了多级纹理, 则还要乘以1.33
+11. 最佳实践
+    - 硬件 :: 硬件厂商会针对自己的硬件产品做出优化
+    - 程序 ::
+      1. 预加载
+      2. 及时释放不再使用的纹理
+      3. 多个细碎纹理合成一个大纹理
+      4. 使用多级纹理减少内存占用
+      5. 使用多重纹理取代多次绘制
+      6. 使用alpha预乘减少混合计算量
+    - 资源 ::
+      1. 选择合适的资源格式, 对于一些不透明的背景来说, 采用RGB565, 既能获得极高的
+         颜色表现, 内存占用还低
+      2. 使用压缩纹理, 由于游戏场景是由很多复杂的元素构成的, 一个图片的压缩损失实
+         际影响不大
+
+* 精灵
+精灵是2d游戏中最重要的元素, 他将一个纹理的部分(或者全部)矩形区域绘制到屏幕上
+1. 精灵在cocos内使用quadcommand绘制
+2. 精灵的颜色混合
+   将光栅化产生的颜色称为source, 帧缓冲里的颜色称为destination, 根据不同的混合模
+   式有不同的混合公式, 拿默认的FUNC_ADD公式举例:
+   R=R_{s}*S_{r} + R_{d}*D_{r}
+   G,B和A和R同理, 其中S和D分别代表source和dest的权重系数, cocos默认的系数如下所示:
+   - source (GL_SRC_ALPHA) :: 四个系数为S_{A} (S_{A}为alpha值除以255, 是0-1的小数)
+   - destination (GL_ONE_MINUS_SRC_ALPHA) :: 四个系数为1-S_{A}_{}
+3. 精灵的颜色叠加
+   如果设置了cascade模式, 则子sprite的颜色会受到父节点颜色的影响, 叠加公式为:
+   #+BEGIN_QUOTE
+   displaycolor.r = selfcolor.r * parentcolor.r/255.0 
+   #+END_QUOTE
+   g和b分量同理, 举例就是如果父节点是红色, 那么叠加之后子节点无论之前是什么颜色,
+   最后显示的颜色一定g和b分量都为0(因为父节点这两个分量为0), r分量和自己的颜色
+   一致(因为父节点的颜色255/255 == 1)
+4. alpha预乘
+   已知颜色混合的默认公式为(R_{s}, G_{s}, B_{s})*A_{s} + (R_{d}, G_{d}, B_{d})*(1-AS)
+   通过提前计算RGB通道实际的值(R_{s}, G_{s}, B_{s})*A_{s}, 减少渲染时的计算次数
+5. 精灵表
+   通过将多个精灵合到一张纹理上, 并通过配置文件(xml, json, plist)来定位每个精灵
+   的信息. 这项计数可以有效减少绘制次数, 显著地提高性能
+6. 精灵动画
+   - 关键帧动画
+   - 骨骼动画
+   这两种动画一般都通过一个或多个精灵表存储精灵, 通过配置文件存储关键帧信息, 骨骼
+   信息
+7. 批绘制的使用场景
+   1. 模型简单, 元素都来自同一个纹理
+   2. 位于同一相邻层级
+   Label, TileMap, Particle System非常符合这些特征, 此时应该使用SpriteBatchNode
+   来绘制, 其他情况应该采用Sprite的自动批绘制
+8. 九宫格
+   有些时候对纹理缩放, 我们只想缩放中间的某个区域(边缘不变), 由于一般中间区域都是
+   纯色区域, 缩放是不会导致失真的. 通过九宫格把纹理划分为9个区域, 只有最中间的区域
+   会受到放缩影响, 其他8个角落不会变化.
