[org]update note

--- a/src/org/ref/我所理解的Cocos2d-x.org
+++ b/src/org/ref/我所理解的Cocos2d-x.org
@@ -267,3 +267,98 @@
    有些时候对纹理缩放, 我们只想缩放中间的某个区域(边缘不变), 由于一般中间区域都是
    纯色区域, 缩放是不会导致失真的. 通过九宫格把纹理划分为9个区域, 只有最中间的区域
    会受到放缩影响, 其他8个角落不会变化.
+
+* OpenGL ES着色语言
+1. 基础类型
+   * void
+   * bool
+   * int
+   * float
+   * vec
+   * mat
+   * sampler
+   * struct, struct不能嵌套
+   * array
+2. 存储限定符
+   * none :: 局部可读写变量或者方法参数
+   * const :: 编译时常量
+   * attribute :: 应用程序传递给顶点着色器的顶点数据
+   * uniform :: 应用程序传递给顶点和片段着色器的全局变量, 在一个图元的绘制过程中保持不变
+   * varying :: 由顶点着色器传递给片段着色器, 经过插值的易变变量
+3. 构造器
+   着色器语言支持转型, 例如使用int(bool)将一个bool值转为int, 有如下需要注意的点:
+   * 单个标量构造矢量会使矢量的所有值为标量的值
+   * 可以使用多个标量构造矢量
+   * 标量构造矢量时如果类型不对会自动转换
+   * 可以使用单个标量来初始化矩阵的对角线
+   * 可以使用多个矢量或标量构造矩阵
+   * 结构体也可以使用构造器, 但是不支持类型转换
+4. 矢量的分量
+   常用的三种形式为:
+   | (x, y, z, w) | 顶点坐标 |
+   | (r, g, b, a) | 颜色分量 |
+   | {s, t, p, q) | 纹理坐标 |
+   * 分量可以随意组合, 但是不能超过自身分量的上限, 比如:
+   #+begin_src c
+     vec4 v4;
+     v4.rgba;   // 等与自身
+     v4.rrrr;   // 一个vec4变量
+     v4.rgb;    // 一个vec3变量
+     v4.b;      // 一个float变量
+     v4.xtq;    // 不合法, 必须使用相同的形式
+     v4.xxyyzz; // 不合法, 太长了
+   #+end_src
+   * 分量可以作为左值, 此时不能重名
+   * 可以使用下标索引分量, 0代表x, 1代表y, 以此类推
+5. 矩阵的分量
+   矩阵的下标代表矩阵的一列, 下标的个数等于矩阵的列数
+6. 结构体和成员
+   * 成员使用.引用
+   * 相同类型的结构体之间可以比较, 当且仅当它们的每个成员都相等时, 它们相等
+7. 矢量和矩阵操作
+   * 矢量和标量操作将会把标量作用到矢量的每一个分量上
+   * 其余情况一般遵循线性代数的计算方式
+   
+* OpenGL ES着色程序
+1. 顶点和顶点数组
+   * 图元由一系列顶点构成, 共有7种图元
+   * 以STRIP结尾的图元可以共享部分顶点
+   * 顶点由属性构成, 比如坐标, 颜色, 纹理坐标等
+   * 通过VertexAttribPointer定义顶点数组
+   * 通过BindAttribLocation绑定顶点数组绑定到着色器中的变量
+   * 通过DrawArrays和DrawElements将顶点数组传送到GPU
+     - DrawArrays按照顺序绘制图元
+     - DrawElements根据传入的索引来组合图元, 方便重用顶点
+2. 顶点缓冲对象
+   通过VBO将部分常用到顶点数据缓存到高速的GPU缓存中
+   - 使用GenBuffers分配缓冲
+   - 使用BindBuffer创建缓冲
+   - 使用BufferData向缓冲传送数据
+   - 使用VAO来存储多个VBO对象, 记录其对顶点数组的状态的修改
+3. 着色器程序
+   - 着色器对象需要加载, 编译, 连接之后才能使用, 链接之后叫做着色器程序
+   - 如果没有设置着色器程序, 那么渲染管线是无法工作的
+   - 一个着色器对象被删除时, 如果它链接的着色器程序正在使用, 则不会被删除, 等到所
+     有使用此对象的着色器程序都不使用时释放此对象
+   - 一个着色器对象可以被附加到多个着色器程序上, 一个着色器程序只能有一个顶点着色
+     对象和一个片段着色对象
+   - 一个着色器程序被删除时, 如果它正在被使用, 那么它不会被删除, 只有它不再被使用
+     的时候才会被删除
+4. 顶点着色器
+   - 顶点着色器接受两种输入参数:
+     * 顶点属性变量
+     * 全局属性变量
+   - 顶点着色器输出一个变换过后的坐标值, 以及颜色和纹理坐标
+5. 片段着色器
+   图形的效果大部分在此处实现, 比如法线贴图, 颜色融合等等
+   - 片段着色器的输入参数:
+     * 顶点着色器的输出
+     * 全局变量
+     * 纹理采样器
+   - 片段着色器的输出参数:
+     * 片段颜色值
+6. 最佳实践
+   - 创建一个着色器并链接是很耗时的, 应该在初始化的时候创建并缓存
+   - 如果一个变量对一次绘制来说是始终相同的, 那么应该设置为全局属性
+   - 着色器中尽量使用常量来索引数组, 效率比变量要高很多
+   - 尽可能多的使用多重纹理, 可以有效提高性能和渲染效果
