--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -13,10 +13,12 @@
 * Inbox
 * Next Action
 ** TODO [#A] 大壮名城G1-1018租房月志                                :event:
-DEADLINE: <2021-09-12 周日 23:00 +1m> SCHEDULED: <2021-09-12 周日 09:00 +1m>
+DEADLINE: <2021-10-12 周二 23:00 +1m> SCHEDULED: <2021-10-12 周二 09:00 +1m>
 :PROPERTIES:
 :LOGGING: DONE(@)
 :END:
+- State "DONE"       from "TODO"       [2021-09-12 周日 09:06] \\
+  1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
 - State "DONE"       from "TODO"       [2021-08-12 周四 16:02] \\
   1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费113
 - State "DONE"       from "TODO"       [2021-07-12 周一 09:21] \\
@@ -31,12 +33,35 @@ DEADLINE: <2021-09-12 周日 23:00 +1m> SCHEDULED: <2021-09-12 周日 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                    :event:
-DEADLINE: <2021-09-19 周日 23:00 ++1w> SCHEDULED: <2021-09-18 周六 18:00 ++1w>
+DEADLINE: <2021-09-26 周日 23:00 ++1w> SCHEDULED: <2021-09-25 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-09-11 周六 15:27]
+:LAST_REPEAT: [2021-09-19 周日 19:24]
 :END:
+- State "DONE"       from "TODO"       [2021-09-19 周日 19:24] \\
+  1. 增加了两个新的热键方便开发
+     - 重载代码: 通过比较pyc和py的最后修改时间, 来reload代码, 避免重新启动游戏, 节省时间
+     - 接入netprint模块: 可视化网络协议收发
+  2. 学习pub代码
+     - pubonlineupdate
+     - publockfile
+     - pubbigdata
+     - pubnotch
+     - pubconfirmbox
+     - pubshenhe_new
+     - pubpingqueue
+  3. 迁移多队战斗代码
+     - [X] 模型层迁移优化
+     - [X] 多队基本界面
+     - [X] 多队选择界面
+     - [ ] 小队配置界面
+     - [ ] 导表数据解析
+     - [ ] 服务端战斗接入
+  4. 完成我所理解的cocos2d-x 第七章的学习
+  ------------------------------------------------
+  ------------------------------------------------
+  1. 啊, 无限的限电把时间搞乱了, 3天的中秋成了一天了, 麻了
 - State "DONE"       from "TODO"       [2021-09-11 周六 15:27] \\
   1. 处理了补丁的外链部分没有差异的问题
      原因: 这个是由于代码里的外链版本和代码的版本是独立的, 无论检出什么版本的代码
