--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -13,12 +13,13 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 完成每周周报                                             :work:
-SCHEDULED: <2021-09-18 周六 18:00 ++1w> DEADLINE: <2021-09-20 周一 12:00 ++1w>
+** TODO [#A] 完成每周周报                                            :work:
+SCHEDULED: <2021-09-25 周六 18:00 ++1w> DEADLINE: <2021-09-27 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-09-11 周六 15:42]
+:LAST_REPEAT: [2021-09-19 周日 19:44]
 :END:
+- State "DONE"       from "TODO"       [2021-09-19 周日 19:44]
 - State "DONE"       from "TODO"       [2021-09-11 周六 15:42]
 - State "DONE"       from "TODO"       [2021-09-04 周六 16:04]
 - State "DONE"       from "TODO"       [2021-08-28 周六 17:09]
@@ -44,14 +45,18 @@ SCHEDULED: <2021-09-18 周六 18:00 ++1w> DEADLINE: <2021-09-20 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 完成leetcode一两道题                                    :learn:
-SCHEDULED: <2021-09-12 周日 09:00 ++1d>
+SCHEDULED: <2021-09-20 周一 09:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-09-11 周六 13:33]
+:LAST_REPEAT: [2021-09-19 周日 10:06]
 :END:
 
+- State "DONE"       from "TODO"       [2021-09-19 周日 10:06]
+- State "DONE"       from "TODO"       [2021-09-17 周五 09:19]
+- State "DONE"       from "TODO"       [2021-09-16 周四 09:36]
+- State "DONE"       from "TODO"       [2021-09-15 周三 09:55]
 - State "DONE"       from "TODO"       [2021-09-11 周六 13:33]
 - State "DONE"       from "TODO"       [2021-09-10 周五 11:11]
 - State "DONE"       from "TODO"       [2021-09-09 周四 14:47]
@@ -194,33 +199,46 @@ SCHEDULED: <2021-09-12 周日 09:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#A] 学习《我所理解的cocos2d-x》                          :learn:m8:
-SCHEDULED: <2021-09-12 周日 09:00 ++1d>
+** TODO [#A] 学习《我所理解的cocos2d-x》                         :learn:m8:
+SCHEDULED: <2021-09-17 周五 09:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:60
 :STYLE:    habit
-:LAST_REPEAT: [2021-09-11 周六 15:11]
+:LAST_REPEAT: [2021-09-16 周四 20:47]
 :END:
+- State "DONE"       from "TODO"       [2021-09-16 周四 20:47]
 - State "DONE"       from "TODO"       [2021-09-11 周六 15:11]
 - State "DONE"       from "TODO"       [2021-09-04 周六 15:52]
 - State "DONE"       from "TODO"       [2021-09-03 周五 13:24]
 - State "DONE"       from "TODO"       [2021-09-02 周四 10:49]
 - State "DONE"       from "TODO"       [2021-08-31 周二 09:33]
 - State "DONE"       from "TODO"       [2021-08-26 周四 10:25]
-** DONE [#A] 规范模块重启代码                                          :m8:
-CLOSED: [2021-09-10 周五 20:28] SCHEDULED: <2021-09-06 周一 09:00>
-** DONE [#A] 完善m8delegate                                            :m8:
-CLOSED: [2021-09-10 周五 20:28] SCHEDULED: <2021-09-10 周五 11:13>
 ** Archive                                                        :ARCHIVE:
 *** DONE [#A] 优化游戏启动流程                                    :work:m8:
 CLOSED: [2021-09-04 周六 15:52] SCHEDULED: <2021-09-02 周四 13:00>
 :PROPERTIES:
 :ARCHIVE_TIME: 2021-09-04 周六 16:04
 :END:
-** DONE [#A] 编写季度报告                                               :m8:
+*** DONE [#A] 规范模块重启代码                                         :m8:
+CLOSED: [2021-09-10 周五 20:28] SCHEDULED: <2021-09-06 周一 09:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-09-15 周三 10:55
+:END:
+*** DONE [#A] 完善m8delegate                                           :m8:
+CLOSED: [2021-09-10 周五 20:28] SCHEDULED: <2021-09-10 周五 11:13>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-09-15 周三 10:55
+:END:
+*** DONE [#A] 编写季度报告                                             :m8:
 CLOSED: [2021-09-06 周一 17:30] DEADLINE: <2021-09-08 周三 21:00> SCHEDULED: <2021-09-06 周一 13:00>
-** DONE [#A] 处理补丁未能同步外链问题                                  :m8:
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-09-15 周三 10:55
+:END:
+*** DONE [#A] 处理补丁未能同步外链问题                                 :m8:
 CLOSED: [2021-09-08 周三 15:44] SCHEDULED: <2021-09-06 周一 14:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-09-15 周三 10:55
+:END:
 * Appointment
 * Project
 ** SCH [#A] 分享pub代码                                                :m8:
@@ -233,13 +251,37 @@ CLOSED: [2021-09-09 周四 14:40] DEADLINE: <2021-09-11 周六 18:00> SCHEDULED:
 :PROPERTIES:                          
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:                          
-*** TODO 分享pubeditor, pubrestools, pubonlineupdate, publockfile, pubbigdata
-SCHEDULED: <2021-09-13 周一 13:40>
+*** DONE 分享pubeditor, pubrestools, pubonlineupdate, publockfile, pubbigdata, pubnotch, pubconfirmbox, pub_shenhe_textcheckdata_new, pubpingqueue
+CLOSED: [2021-09-15 周三 16:22] SCHEDULED: <2021-09-13 周一 13:40>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-*** WAIT 分享pubuilocation, pubnotch, pubaccount_extension, pubtest1_black, pub_shenhe_textcheckdata_new
-*** WAIT 分享pubpingqueue, pubconfirmbox, publogmgr, pubsafemodule, pubaccessdata
+*** TODO 分享pubuilocation, pubaccount_extension, pubtest1_black
+SCHEDULED: <2021-09-15 周三 16:22>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** WAIT 分享publogmgr, pubsafemodule, pubaccessdata
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
+:END:
+** SCH [#A] 迁移多队战斗代码                                           :m8:
+SCHEDULED: <2021-09-15 周三 16:30> DEADLINE: <2021-10-15 周五 18:00>
+:PROPERTIES:
+:BLOCKER: children
+:END:                          
+*** DONE 阅读新的战斗框架
+CLOSED: [2021-09-19 周日 09:52] SCHEDULED: <2021-09-16 周四 09:00>
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:                          
+*** TODO 确定迁移思路
+SCHEDULED: <2021-09-19 周日 09:52>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** WAIT 逐步迁移代码
+*** WAIT 测试
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
 :END:
