[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -32,13 +32,33 @@ DEADLINE: <2021-10-12 周二 23:00 +1m> SCHEDULED: <2021-10-12 周二 09:00 +1m>
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
-** TODO [#A] 归档并回顾一周的计划                                    :event:
-DEADLINE: <2021-09-26 周日 23:00 ++1w> SCHEDULED: <2021-09-25 周六 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                   :event:
+DEADLINE: <2021-10-03 周日 23:00 ++1w> SCHEDULED: <2021-10-02 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-09-19 周日 19:24]
+:LAST_REPEAT: [2021-09-26 周日 20:47]
 :END:
+- State "DONE"       from "TODO"       [2021-09-26 周日 20:47] \\
+  1. 学习pub代码
+     - publogmgr
+     - pubsafemodule
+     - pubaccessdat
+     - pubqrcode
+     - pubaccount_extension
+     - pubtest1_black
+  2. 迁移多队战斗代码
+     - [X] 模型层迁移优化
+     - [X] 多队基本界面
+     - [X] 多队选择界面
+     - [X] 小队配置界面
+     - [X] 导表数据解析
+     - [ ] 服务端战斗接入 [50%]
+     - [ ] 战斗界面 [50%]
+  3. 完成我所理解的cocos2d-x 第八到十章的学习
+  ------------------------------------------------
+  ------------------------------------------------
+  1. 连续上8天, 痛苦面具
 - State "DONE"       from "TODO"       [2021-09-19 周日 19:24] \\
   1. 增加了两个新的热键方便开发
      - 重载代码: 通过比较pyc和py的最后修改时间, 来reload代码, 避免重新启动游戏, 节省时间
