--- a/src/org/ref/我所理解的Cocos2d-x.org
+++ b/src/org/ref/我所理解的Cocos2d-x.org
@@ -362,3 +362,31 @@
    - 如果一个变量对一次绘制来说是始终相同的, 那么应该设置为全局属性
    - 着色器中尽量使用常量来索引数组, 效率比变量要高很多
    - 尽可能多的使用多重纹理, 可以有效提高性能和渲染效果
+
+* 帧缓冲
+帧缓冲是渲染的目标, 绘制管线最终将场景绘制到帧缓冲, 然后显示到屏幕上
+1. 帧缓冲由一系列二维像素数组集合而成
+2. 每个像素由多个多个位构成
+3. 像素数组构成了多个逻辑缓冲区:
+   - 颜色
+   - 深度
+   - 模板
+4. 颜色缓冲区如果是由视窗系统提供的话, 则有前后两个缓冲区, 前缓冲区用于在屏幕上
+   显示, 后缓冲区用于GL渲染
+5. 每个逻辑缓冲区的数据存储在一个可附加的图像中, 有两种类型:
+   - 纹理
+   - 渲染缓冲对象
+6. 视窗系统提供的帧缓冲是不能修改的
+7. 帧缓冲使用完成状态来检测附加是否合法, 可能会对图像的尺寸, 格式, 数量有一定的要求
+8. cocos2d-x的RenderTexture可以将场景绘制到纹理上
+
+* 片段操作
+1. 像素所有权测试被GL Context所有, 如果一个片段不被当前GL所有, 则它将被丢弃. 比如
+   在多窗口的情境下, 不属于当前窗口的内容将会被盖住
+2. 裁剪测试用来判断当前片段是否属于应用定义的矩形区域
+3. 模板测试可以让应用定义一个遮罩, 遮罩内的片段将会被丢弃或者保留, 外部的行为与之
+   相反
+4. 深度测试用来剔除被场景遮住的片段, 注意, 对透明物体可能导致错误的行为
+5. 模板测试的比较是通过and的位运算来实现的, 通过将逻辑缓冲区的值和模板缓冲区进行
+   位运算来判断其是否满足某种条件, 不满足会被丢弃
+6. 模板测试主要用于实现光照阴影, 裁剪, 镜面等特效
