[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -33,12 +33,25 @@ DEADLINE: <2021-10-12 周二 23:00 +1m> SCHEDULED: <2021-10-12 周二 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-10-03 周日 23:00 ++1w> SCHEDULED: <2021-10-02 周六 18:00 ++1w>
+DEADLINE: <2021-10-10 周日 23:00 ++1w> SCHEDULED: <2021-10-09 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-09-26 周日 20:47]
+:LAST_REPEAT: [2021-09-30 周四 18:05]
 :END:
+- State "DONE"       from "TODO"       [2021-09-30 周四 18:04] \\
+  1. 迁移多队战斗代码
+     - [X] 模型层迁移优化
+     - [X] 多队基本界面
+     - [X] 多队选择界面
+     - [X] 小队配置界面
+     - [X] 导表数据解析
+     - [X] 服务端战斗接入
+     - [X] 战斗界面
+  2. 完成我所理解的cocos2d-x 第十一到十三章的学习
+  ------------------------------------------------
+  ------------------------------------------------
+  1. 8天结束了, 国庆了好耶
 - State "DONE"       from "TODO"       [2021-09-26 周日 20:47] \\
   1. 学习pub代码
      - publogmgr
@@ -53,8 +66,6 @@ DEADLINE: <2021-10-03 周日 23:00 ++1w> SCHEDULED: <2021-10-02 周六 18:00 ++1
      - [X] 多队选择界面
      - [X] 小队配置界面
      - [X] 导表数据解析
-     - [ ] 服务端战斗接入 [50%]
-     - [ ] 战斗界面 [50%]
   3. 完成我所理解的cocos2d-x 第八到十章的学习
   ------------------------------------------------
   ------------------------------------------------
@@ -75,9 +86,6 @@ DEADLINE: <2021-10-03 周日 23:00 ++1w> SCHEDULED: <2021-10-02 周六 18:00 ++1
      - [X] 模型层迁移优化
      - [X] 多队基本界面
      - [X] 多队选择界面
-     - [ ] 小队配置界面
-     - [ ] 导表数据解析
-     - [ ] 服务端战斗接入
   4. 完成我所理解的cocos2d-x 第七章的学习
   ------------------------------------------------
   ------------------------------------------------
@@ -395,13 +403,25 @@ DEADLINE: <2021-10-03 周日 23:00 ++1w> SCHEDULED: <2021-10-02 周六 18:00 ++1
   ------------------------------------------------
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
-** TODO [#A] 每月归档到年度文件                                      :event:
-DEADLINE: <2021-09-30 周四 23:00 ++1m> SCHEDULED: <2021-09-30 周四 09:00 ++1m>
+** TODO [#A] 每月归档到年度文件                                     :event:
+DEADLINE: <2021-10-30 周六 23:00 ++1m> SCHEDULED: <2021-10-30 周六 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-08-30 周一 20:50]
+:LAST_REPEAT: [2021-09-30 周四 17:40]
 :END:
+- State "DONE"       from "TODO"       [2021-09-30 周四 17:40] \\
+  工作上:
+  1. 优化游戏启动流程
+  2. 规范模块重启代码
+  3. 完善m8delegate
+  4. 编写季度报告
+  5. 处理补丁未能同步外链问题
+  6. 分享pub代码
+  7. 迁移多队战斗代码
+  生活上:
+  1. 理发
+  2. 老妈来这里过国庆了
 - State "DONE"       from "TODO"       [2021-08-30 周一 20:50] \\
   第五个月, 工作上:
   1. 完成了基础商店功能的制作
@@ -475,12 +495,5 @@ SCHEDULED: <2021-06-12 周六 09:00>
 ** WAIT 爬火炉山                                                     :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
-** Archive                                                        :ARCHIVE:
-*** DONE 理发                                                       :event:
-CLOSED: [2021-09-04 周六 15:45]
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-09-04 周六 16:04
-:END:
-<2021-09-02 周四 19:00>
 * Project
 * Someday
