--- a/src/org/ref/我所理解的Cocos2d-x.org
+++ b/src/org/ref/我所理解的Cocos2d-x.org
@@ -390,3 +390,79 @@
 5. 模板测试的比较是通过and的位运算来实现的, 通过将逻辑缓冲区的值和模板缓冲区进行
    位运算来判断其是否满足某种条件, 不满足会被丢弃
 6. 模板测试主要用于实现光照阴影, 裁剪, 镜面等特效
+
+* 多分辨率支持
+对于手机app, 对多分辨率的支持是一个无法回避的话题, cocos2d-x提供了一套简洁的方案
+来处理多分辨率适配
+1. 首先, 应用程序所有和坐标相关的信息都是以设计分辨率来表达的, 这个分辨率是固定的,
+   使开发人员无需关心坐标和具体设备坐标的转换
+2. 当设计分辨率与屏幕分辨率不一致时, 提供了几种缩放策略:
+   * EXACT_FIT :: 表示充满整个屏幕, 如果设备分辨率和设计分辨率比例不一致, 将不会
+     按照比例缩放, 这样会导致失真, 因此很少采用这种缩放策略
+   * NO_BORDER :: 使较窄的一边充满屏幕, 长边等比例缩放, 如果设备分辨率和设计分辨
+     比例不一致, 可能会导致长边部分被裁减的问题
+   * SHOW_ALL :: 使较长的一边充满屏幕, 短边按比例缩放, 如果设备分辨率和设计分辨
+     比例不一致, 可能会导致短边部分出现黑边
+   * FIXED_XXX :: 根据开发者指定一个边进行缩放, 和NO_BORDER, SHOW_ALL不同的是
+     它使用屏幕左下角作为原点进行缩放, 并且充满屏幕, 如果分辨率比率不一致则会出现
+     白边
+3. 几种获取分辨率的方式:
+   * getWinSize :: 返回OpenGL视口转换至设计分辨率下的尺寸, 表示的是绘制区域
+   * getVisibleSize :: 返回OpenGL视口转换至设计分辨率下的屏幕可见区域大小
+   * getFrameSize :: 获取的是真实屏幕的分辨率
+4. 对于资源可以设置资源缩放因子, setContentScaleFactor, 参数的因子代表多少
+   像素资源应该占据一个实际的像素
+5. 由于坐标系统使用的都是归一化的坐标值, 对于图元来说, 它们和分辨率是没有关系的
+
+* 事件分发
+事件分发是cocos2d-x的核心部分
+1. 什么是事件?
+   当程序内部完成某种逻辑, 或者外部输入时, 需要等待其他模块对该行为进行响应时. 我
+   们可以定义一个事件来表示这个行为, 并传递事件给其他模块
+2. 事件的工作机制
+   一般事件都是基于订阅者模式来实现的. 存在一个公共的事件分发器, 响应者需要注册自
+   己想要监听响应的事件, 但某个模块触发了某个操作, 会把事件发送到公共的事件分发器,
+   分发器会根据事件的类型以及注册的响应者的信息, 将事件转发给合适的响应者.
+3. cocos2dx中, 每个订阅者都是EventListenerd的子类, EventListener支持如下类型:
+   - TOUCH_ONE_BY_ONE :: 单点触碰
+   - TOUCH_ALL_AT_ONCE :: 多点触碰
+   - KEYBOARD :: 键盘事件
+   - ACCELERATION :: 重力加速度事件
+   - FOUSE :: 焦点事件
+   - CUSTOM :: 触摸事件
+4. 支持对订阅者的注册, 删除, 修改操作
+5. 对于关联到Node上的订阅者, 其事件分发的顺序何其渲染的顺序是相反的
+6. 事件可以嵌套, 可以在分发途中修改事件, 也可以停止传播事件
+7. 触摸事件是cocos中最重要的事件, 分为单点触摸和多点触摸事件
+8. 不可见的对象依然会被分发消息, 需要实现者自行处理是否响应
+
+* 字体的故事
+1. 字体有两种表达方式:
+   * 点阵字 :: 将所有字体存储在一张精灵表中
+   * 轮廓字体 :: 支持缩放的字体
+2. 轮廓字形的结构
+   * 点 :: 点和点构成了直线或者贝塞尔曲线
+   * 轮廓 :: 由直线和曲线构成
+   * 方向 :: 线的方向
+   * 交叉 :: 轮廓之间可以交叉
+3. FreeType字体引擎
+   一个开源的字体引擎, 用来处理TrueType字体的解析工作
+   * 字体文件 :: 包含了字符编码方式, 字形位置信息以及编码映射表
+   * 字符度量 :: 一个字符需要多个参数来指导引擎如何渲染字形, 比如步进宽度, 边界框等
+   * 字形解析
+     1. 将字形所有的轮廓中的点进行缩放到指定大小
+     2. 对缩放后的轮廓使用网格对齐
+     3. 将网格对齐的沦落进行字距微调
+4. FontAtlas
+   用来描述Cocos2dx中的一个字体信息, 它包含了每个字的描述信息以及包含这些字符位图
+   的精灵纹理表
+5. Label
+   3.0提供的新的绘制字体的元素, 支持通过多种来源(系统, 轮廓字体, 点阵字体, 字符集)
+   来创建字体, 并且支持丰富的特效(阴影, 描边, 发光)
+6. 最佳实践
+   * 对于英文这种字符集较小的字体, 除非需要频繁缩放, 否则应尽量优先使用预生成的精
+     灵表
+   * 程序中最好固定几个固定尺寸的字体, 不要随意食用不同字号的文字, 因为字号不同将
+     导致重新解析轮廓字体, 哪怕他们只差一像素
+   * 阴影特效有很高的性能损耗, 如果能用点阵字体代替, 就不要直接使用Label的阴影特
+     效
