--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,11 +14,12 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2021-10-02 周六 18:00 ++1w> DEADLINE: <2021-10-04 周一 12:00 ++1w>
+SCHEDULED: <2021-10-09 周六 18:00 ++1w> DEADLINE: <2021-10-11 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-09-27 周一 17:27]
+:LAST_REPEAT: [2021-09-30 周四 18:06]
 :END:
+- State "DONE"       from "TODO"       [2021-09-30 周四 18:06]
 - State "DONE"       from "TODO"       [2021-09-27 周一 09:27]
 - State "DONE"       from "TODO"       [2021-09-19 周日 19:44]
 - State "DONE"       from "TODO"       [2021-09-11 周六 15:42]
@@ -46,14 +47,17 @@ SCHEDULED: <2021-10-02 周六 18:00 ++1w> DEADLINE: <2021-10-04 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 完成leetcode一两道题                                    :learn:
-SCHEDULED: <2021-09-28 周二 09:00 ++1d>
+SCHEDULED: <2021-10-01 周五 09:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-09-27 周一 09:12]
+:LAST_REPEAT: [2021-09-30 周四 14:51]
 :END:
 
+- State "DONE"       from "TODO"       [2021-09-30 周四 14:51]
+- State "DONE"       from "TODO"       [2021-09-29 周三 09:10]
+- State "DONE"       from "TODO"       [2021-09-28 周二 09:02]
 - State "DONE"       from "TODO"       [2021-09-27 周一 09:12]
 - State "DONE"       from "TODO"       [2021-09-26 周日 09:17]
 - State "DONE"       from "TODO"       [2021-09-25 周六 09:06]
@@ -206,12 +210,14 @@ SCHEDULED: <2021-09-28 周二 09:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#A] 学习《我所理解的cocos2d-x》                          :learn:m8:
-SCHEDULED: <2021-09-27 周一 09:00 ++1d>
+SCHEDULED: <2021-10-01 周五 09:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:60
 :STYLE:    habit
-:LAST_REPEAT: [2021-09-26 周日 20:28]
+:LAST_REPEAT: [2021-09-30 周四 16:31]
 :END:
+- State "DONE"       from "TODO"       [2021-09-30 周四 16:31]
+- State "DONE"       from "TODO"       [2021-09-28 周二 10:51]
 - State "DONE"       from "TODO"       [2021-09-26 周日 20:28]
 - State "DONE"       from "TODO"       [2021-09-25 周六 20:40]
 - State "DONE"       from "TODO"       [2021-09-16 周四 20:47]
@@ -221,84 +227,8 @@ SCHEDULED: <2021-09-27 周一 09:00 ++1d>
 - State "DONE"       from "TODO"       [2021-09-02 周四 10:49]
 - State "DONE"       from "TODO"       [2021-08-31 周二 09:33]
 - State "DONE"       from "TODO"       [2021-08-26 周四 10:25]
-** Archive                                                        :ARCHIVE:
-*** DONE [#A] 优化游戏启动流程                                    :work:m8:
-CLOSED: [2021-09-04 周六 15:52] SCHEDULED: <2021-09-02 周四 13:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-09-04 周六 16:04
-:END:
-*** DONE [#A] 规范模块重启代码                                         :m8:
-CLOSED: [2021-09-10 周五 20:28] SCHEDULED: <2021-09-06 周一 09:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-09-15 周三 10:55
-:END:
-*** DONE [#A] 完善m8delegate                                           :m8:
-CLOSED: [2021-09-10 周五 20:28] SCHEDULED: <2021-09-10 周五 11:13>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-09-15 周三 10:55
-:END:
-*** DONE [#A] 编写季度报告                                             :m8:
-CLOSED: [2021-09-06 周一 17:30] DEADLINE: <2021-09-08 周三 21:00> SCHEDULED: <2021-09-06 周一 13:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-09-15 周三 10:55
-:END:
-*** DONE [#A] 处理补丁未能同步外链问题                                 :m8:
-CLOSED: [2021-09-08 周三 15:44] SCHEDULED: <2021-09-06 周一 14:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-09-15 周三 10:55
-:END:
 * Appointment
 * Project
-** DONE [#A] 分享pub代码                                               :m8:
-CLOSED: [2021-09-24 周五 09:51] SCHEDULED: <2021-09-08 周三 13:39> DEADLINE: <2021-10-02 周六 18:00>
-:PROPERTIES:
-:BLOCKER: children
-:END:                          
-*** DONE 分享publink, pubnetprint, pubinternational, pubairtest, pubvshop, pubkeyboard
-CLOSED: [2021-09-09 周四 14:40] DEADLINE: <2021-09-11 周六 18:00> SCHEDULED: <2021-09-08 周三 15:00>
-:PROPERTIES:                          
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:                          
-*** DONE 分享pubeditor, pubrestools, pubonlineupdate, publockfile, pubbigdata, pubnotch, pubconfirmbox, pub_shenhe_textcheckdata_new, pubpingqueue
-CLOSED: [2021-09-15 周三 16:22] SCHEDULED: <2021-09-13 周一 13:40>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-*** DONE 分享pubqrcode, pubaccount_extension, pubtest1_black
-CLOSED: [2021-09-20 周一 10:58] SCHEDULED: <2021-09-15 周三 16:22>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-*** DONE 分享publogmgr, pubsafemodule, pubaccessdata
-CLOSED: [2021-09-24 周五 09:51] SCHEDULED: <2021-09-20 周一 10:58>
-:PROPERTIES:                          
-:TRIGGER+: parent todo!(DONE)
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-** SCH [#A] 迁移多队战斗代码                                           :m8:
-SCHEDULED: <2021-09-15 周三 16:30> DEADLINE: <2021-10-15 周五 18:00>
-:PROPERTIES:
-:BLOCKER: children
-:END:                          
-*** DONE 阅读新的战斗框架
-CLOSED: [2021-09-19 周日 09:52] SCHEDULED: <2021-09-16 周四 09:00>
-:PROPERTIES:                          
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:                          
-*** DONE 确定迁移思路
-CLOSED: [2021-09-24 周五 09:17] SCHEDULED: <2021-09-19 周日 09:52>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-*** TODO 逐步迁移代码
-SCHEDULED: <2021-09-24 周五 09:17>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-*** WAIT 测试
-:PROPERTIES:                          
-:TRIGGER+: parent todo!(DONE)
-:END:
 * Someday
 ** 学习《代码之外的生存指南》                                :learn:future:
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
@@ -307,6 +237,5 @@ SCHEDULED: <2021-09-24 周五 09:17>
 ** 学习 elisp                                                 :learn:future:
 ** 温习《流畅的python》                                      :learn:future:
 ** 温习《设计模式》                                          :learn:future:
-** 学习《我所理解的cocox2d》                                 :learn:future:
 ** 练习字帖                                                  :learn:future:
 ** 学习英语                                                  :learn:future:
