[org]update note

--- a/src/org/ref/我所理解的Cocos2d-x.org
+++ b/src/org/ref/我所理解的Cocos2d-x.org
@@ -466,3 +466,134 @@
      导致重新解析轮廓字体, 哪怕他们只差一像素
    * 阴影特效有很高的性能损耗, 如果能用点阵字体代替, 就不要直接使用Label的阴影特
      效
+
+* 动画系统
+无论是2d还是3d, 动画系统都是引擎的一个很重要的组件. 动画系统用来在每一帧根据一定
+时间线和游戏角色的状态来修改角色的一些位置等属性, 使得在这个时间线内呈现一组连续
+的画面, 使游戏的场景更富有表现力
+1. 动画系统的计算发生在整个游戏循环的开始阶段, 仅位于用户输入之后, 所以后续的诸如
+   物理引擎和游戏逻辑都可以改变动画的状态
+2. 动画系统基本都是基于线性插值来计算的, cocos2dx支持:
+   * 标量插值
+   * 矢量插值
+   * 变换矩阵插值
+3. Action是一个自描述的对象, 它知道如何修改一个Node元素, Action分为两种:
+   * 即时动画 :: 动画开始到结束在一帧内完成, 比如CallFunc, RemoveSelf
+   * 间隔动画 :: 动画开始到结束在多帧内完成, 比如MoveTo, RotateBy
+   注意动画永远在调用之后的下一帧内开始执行, 因为调用时当前游戏循环的动画计算已经
+   过去了
+4. Action可以取消和命名(方便得到动画的指针)
+5. 可以通过3种方式来组合多种动画获得复杂的动画动作:
+   * Sequence :: 包含多个子动画, 子动画按顺序执行
+   * Spawn :: 包含多个子动画, 所有子动画同时开始执行
+   * Repeat :: 包含一个子动画, 对子动画重复播放
+6. 通过Speed可以修改动画的播放速度
+7. 通过Ease来修改动画的插值方式, 从而让其非线性变换
+
+* 碰撞及物理引擎
+cocos2dx使用Chipmunk2D作为物理引擎, 包含了碰撞组件和刚体力学模拟两个模块
+1. 碰撞检测
+   * 刚体 :: 用来描述一个参与碰撞检测的物体, 由多个形状和变换来表示
+   * 分类
+     - 动态的体积刚体 :: 使用刚体的体积和质量来模拟刚体受外力的作用, 会受到碰撞和
+       力的影响, 是默认的刚体类型
+     - 静态的体积刚体 :: 不受外力和碰撞影响的动态体积刚体, 一般用来表示迷宫墙或者
+       房屋
+     - 边缘刚体 :: 是一个静态的非体积刚体, 永远不会受物理模拟的影响, 通常用于描述
+       一个无法穿越不可视的边界
+   * 形状
+     - 体积形状; 圆, 矩形, 多边形
+     - 边缘形状; 矩形边缘, 线段边缘, 链式边缘, 多边形边缘
+   * 接触
+     指刚体在相互触碰的过程中, 物理引擎触发的一些列回调, 有四个:
+     - 开始接触, 如果返回false则不再处理碰撞
+     - 碰撞前, 如果返回false则不再处理碰撞
+     - 碰撞后, 可以获得碰撞的动量等物理信息
+     - 碰撞分离, 碰撞结束后触发
+   * 碰撞
+     用来阻止两个物体相互贯穿, 并在两个刚体碰撞时, 将瞬时的力作用到两个刚体上进行
+     物理模拟
+   * 碰撞和接触都可以用掩码进行控制, 设置了掩码之后, 只有两个刚体的掩码and为true
+     才会进行后续的接触响应和碰撞处理; 还支持使用分组来使得相同分组内的刚体发生碰
+     撞和接触
+   * 支持碰撞查询, 比如玩家从某个方向发射子弹, 能否击中目标? 在给定半径内有哪些单
+     位?
+2. 刚体动力学
+   * 基于以下两个假设进行模拟:
+     - 经典力学 :: 物体服从牛顿定律, 物体足够大不会产生量子效应, 速度足够低不会产生
+       相对论效应
+     - 刚体 :: 物体是完美固体, 不会产生形变
+   * 通过冲量和持续的作用力来改变物体的运动状态
+   * 通过摩擦力, 恢复系数, 环境阻力来模拟碰撞之后的刚体表现
+   * 通过约束来模拟两个刚体之间的相对变化, 比如齿轮, 马达, 关节等等
+3. 刚体通过绑定到Node上来加入到游戏的模拟物理世界当中
+4. 对刚体有两种驱动的方式, 一种是物理引擎驱动, 比如爆炸, 弹射导致的刚体运动, 还有
+   一种是游戏驱动, 即直接通过SetPos等方法修改其位置. 这两种方式在同一帧内只能有一
+   个生效
+5. 通过createWithPhysics创建一个带有物理世界的游戏场景, 里面有速度, 重力等属性
+
+* 运行时游戏对象模型
+** 对象模型
+*** 以对象为中心的继承模型
+借助面向对象语言的继承, 重载等功能, 我们几乎可以为所有的游戏对象构建特定的类型定
+义, 但存在以下几个问题:
+1. 复杂的层次结构; 随着游戏的开发, 层次会越来越复杂, 理解一个类就必须要理解其全部
+   的父类, 极大的增加了开发, 理解, 维护的成本
+2. 分类学瓶颈; 游戏的继承树一般都是按照某种分类标准来进行分类的, 一旦确定一个标准
+   之后, 很难采用另一个标准进行分类, 而游戏中对象是极容易变化的, 当新的需求和现有
+   地分类标准冲突后, 就会对现在的层次产生破坏
+3. 多重继承; 会极大的增加代码的复杂度以及内存占用, 实际在生产环境中一般只会使用
+   接口或者mixin
+4. 冒泡效应; 当新的需求破坏了现有的分类标准时, 开发者倾向于将部分可公用的功能向父
+   类迁移, 这就是冒泡效应. 但实际上这个严重的破坏了分类学, 因为父类集成了越来越多
+   的功能, 极端情况下父类具有所有功能, 子类只是父类功能的选择器
+5. 无止境的重构; 当需求变更时, 几乎无法避免对层次结构进行重构
+*** 组件模型
+大量采用has-a式关系而不是is-a式关系, 把继承改为合成. 每个功能独立实现并封装为一个
+组件. 游戏对象根据自身的需求添加需要的组件
+1. 组件的创建及所有权
+   一般有两种方式:
+   - 每个对象都继承自GameObject, 每个子类在构造函数中初始化自己感兴趣的组件
+   - 让所有组件继承自一个基类Component, GameObject拥有一个组件的容器
+*** 以属性为中心的架构
+组件模型依然是以对象为中心的设计, 其在内存中的布局依然是每个对象携带若干组件的属
+性. 而以属性为中心的架构则是将属性按照其类型在内存中聚集到一起, 并且保存持有此属
+性的游戏对象的ID, 换句话说, 此时GameObject退化为一个只有ID的对象
+1. 其数据定义在属性中, 而其行为有两种实现方式:
+   - 通过属性类实现; 此时和组件模式类似
+   - 通过脚本定义行为; 每个属性对应一个脚本函数
+2. 优点:
+   - 没有复杂的层次结构问题
+   - 更有效的使用内存以及cpu的缓存命中机制
+   - 更容易实现数据驱动
+3. 缺点:
+   - 属性之间的关系比较混乱
+   - 细粒度的属性难以实现复杂的行为, 因此属性粒度一般较大
+   - 难以调试
+
+** Entity Component System
+一种以属性为中心的架构
+*** 属性结构
+- Entity :: 表示一个游戏对象, 通常只包含ID
+- Component :: 表示一个属性的数据部分
+- System :: 表示一个属性的行为部分, 通常和Component是一一对应的
+*** 分离数据和行为
+由于分离了数据和行为, ECS可以高效的执行计算, 有效利用CPU缓存命中机制
+*** 数据驱动
+数据驱动意味着需要对游戏需要修改时, 完全不需要程序员的介入, 有常见的三种方式:
+1. 属性值
+   将所有可能修改的属性加入到数据表
+2. 对象结构
+   一般通过将对象的结构转化为Json或者Xml文件, 使得设计师可以通过编辑配置文件来
+   影响对象的行为
+3. 脚本
+   通过事件脚本来执行某些预定义的事件
+** 对象查询
+- 根据唯一标识符查询; cocos使用此种方式
+- 根据类型查询; ECS使用此种方式
+** 对象更新
+*** 更新优化
+按照批次进行更新, 尽可能的是CPU缓存命中率更高
+*** 时序
+1. 按照优先级更新
+2. 桶式更新; 即某个对象必须要在依赖对象更新完毕之后进行更新
