--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -47,14 +47,16 @@ SCHEDULED: <2021-10-09 周六 18:00 ++1w> DEADLINE: <2021-10-11 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 完成leetcode一两道题                                    :learn:
-SCHEDULED: <2021-10-01 周五 09:00 ++1d>
+SCHEDULED: <2021-10-09 周六 09:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-09-30 周四 14:51]
+:LAST_REPEAT: [2021-10-08 周五 09:14]
 :END:
 
+- State "DONE"       from "TODO"       [2021-10-08 周五 09:14]
+- State "DONE"       from "TODO"       [2021-10-07 周四 09:54]
 - State "DONE"       from "TODO"       [2021-09-30 周四 14:51]
 - State "DONE"       from "TODO"       [2021-09-29 周三 09:10]
 - State "DONE"       from "TODO"       [2021-09-28 周二 09:02]
@@ -209,13 +211,19 @@ SCHEDULED: <2021-10-01 周五 09:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#A] 学习《我所理解的cocos2d-x》                          :learn:m8:
-SCHEDULED: <2021-10-01 周五 09:00 ++1d>
+** TODO [#A] 规定UI层级                                           :work:m8:
+SCHEDULED: <2021-10-11 周一 10:00>
+** TODO [#A] 删除battle代码                                       :work:m8:
+SCHEDULED: <2021-10-08 周五 17:18>
+** DONE [#A] 学习《我所理解的cocos2d-x》                         :learn:m8:
+SCHEDULED: <2021-10-09 周六 09:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:60
 :STYLE:    habit
-:LAST_REPEAT: [2021-09-30 周四 16:31]
+:LAST_REPEAT: [2021-10-08 周五 16:19]
 :END:
+- State "DONE"       from "TODO"       [2021-10-08 周五 16:19]
+- State "DONE"       from "TODO"       [2021-10-07 周四 11:22]
 - State "DONE"       from "TODO"       [2021-09-30 周四 16:31]
 - State "DONE"       from "TODO"       [2021-09-28 周二 10:51]
 - State "DONE"       from "TODO"       [2021-09-26 周日 20:28]
@@ -227,6 +235,8 @@ SCHEDULED: <2021-10-01 周五 09:00 ++1d>
 - State "DONE"       from "TODO"       [2021-09-02 周四 10:49]
 - State "DONE"       from "TODO"       [2021-08-31 周二 09:33]
 - State "DONE"       from "TODO"       [2021-08-26 周四 10:25]
+** DONE [#A] 整合并优化英雄选择框                                  :work:m8:
+CLOSED: [2021-10-07 周四 17:40] SCHEDULED: <2021-10-07 周四 13:00>
 * Appointment
 * Project
 * Someday
